# kissat

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING  LICENSE  NEWS.md  README  README.md  VERSION  allocate.h  analyze.c  ands.h  arena.h  assign.c  autarky.c  averages.c  averages.h  backward.c  backward.h  build.c  build.h  bump.c  bump.h  check.c  check.h  clause.c  clueue.c  clueue.h  collect.c  colors.c  compact.h  config.c  configure  decide.h  deduce.h  dense.c  dense.h  dominate.c  dominate.h  (+66 more)
.github/workflows/: codeql-analysis.yml
PGO/: s2x2x2_07.cnf  unsat-symmetrybreaking.cnf
cmake/: CTestConfig.cmake  Config.cmake.in  Welcome.txt  config.h.in
pal-win/: unistd.c  unistd.h
scripts/: build-and-test-all-configurations.sh  determine-coverage.sh  filter-coverage-output.sh  generate-build-header.sh  make-source-release.sh  prepare-competition.sh  replace-terminated.sh
src/: .gdbinit  CMakeLists.txt  allocate.c  allocate.h  analyze.c  analyze.h  ands.c  application.c  arena.c  arena.h  array.h  assign.c  assign.h  attribute.h  autarky.c  autarky.h  averages.c  averages.h  backbone.c  backbone.h  backtrack.c  backtrack.h  backward.c  big.cnf  bits.c  bits.h  branching.c  branching.h  build.c  build.h  bump.c  bump.h  cache.c  cache.h  check.c  check.h  clause.c  clause.h  clueue.c  collect.c  (+162 more)
test/: .gdbinit  makefile  test.c  test.h  testadd.c  testallocate.c  testapplication.c  testapplication.h  testarena.c  testarray.c  testbits.c  testbump.c  testcache.c  testceil.c  testcnfs.h  testcollect.c  testconfig.c  testcoverage.c  testdivert.c  testdivert.h  testdump.c  testendianess.c  testendianness.c  testerror.c  testfifo.c  testfile.c  testformat.c  testheap.c  testinit.c  testkitten.c  testmain.c  testmessages.c  testmessages.h  testoptions.c  testparse.c  testprove.c  testqueue.c  testrandom.c  testrank.c  testreap.c  (+12 more)
test/big/: .gitignore  genbigand.c  makefile
test/cnf/: add128.cnf  add16.cnf  add32.cnf  add4.cnf  add64.cnf  add8.cnf  and1.cnf  and2.cnf  and3.cnf  bin1.cnf  bin2.cnf  bin3.cnf  congr1.cnf  congr2.cnf  congr3.cnf  congr4.cnf  congr5.cnf  congr6.cnf  congr7.cnf  def1.cnf  diamond1.cnf  diamond2.cnf  diamond3.cnf  eq1.cnf  eq2.cnf  eq3.cnf  factor1.cnf  factor2.cnf  factor3.cnf  factor4.cnf  factor5.cnf  full3.cnf  full4.cnf  hard.cnf  ite0.cnf  ite1.cnf  ite10.cnf  ite11.cnf  ite12.cnf  ite13.cnf  (+94 more)
test/cover/: cover0000.cnf  cover0001.cnf  cover0002.cnf  cover0003.cnf  cover0004.cnf  cover0005.cnf  cover0006.cnf  cover0007.cnf  cover0009.cnf  cover0010.cnf  cover0011.cnf  cover0012.cnf  cover0013.cnf  cover0014.cnf  cover0015.cnf  cover0016.cnf  cover0017.cnf  cover0018.cnf  cover0019.cnf  cover0020.cnf  cover0021.cnf  cover0022.cnf  cover0023.cnf  cover0024.cnf  cover0025.cnf  cover0026.cnf  cover0027.cnf  cover0028.cnf  cover0029.cnf  cover0030.cnf  cover0031.cnf  cover0032.cnf  cover0033.cnf  cover0034.cnf  cover0035.cnf  cover0036.cnf  cover0037.cnf  cover0038.cnf  cover0039.cnf  cover0040.cnf  (+5 more)
test/file/: 1.bz2  3.lzma  4.7z  5.xz  uncompressed.lzma
test/parse/: anainsteadoflit  comments  crnl  crnlfile  embeddedcoverage  embeddedcrmissingnl  embeddednegative  embeddedoptiocrnl  embeddedoptionametoolong  embeddedoptioneqmissing  emptyheadercrnl  emptyheaderline  eofafterlit  eofafterlitcomment  eofafterzero  eofbeforeheader  eofbodycomment  eofheadercomment  eofinclauses  eofincommmentafterliteral  eofinheaderafterc  eofinmaxvar  headerspaces  invalidembeddedoption  nlaftersign  nlaftervars  nocafterpspace  nodigitafterpcnfspace  nodigitaftersign  nodigitaftervarsnspace  nofaftern  nonafterc  nonlaftercrafterheaderline  nonlaftercrafterheadliner  nonlaftercrafterlit  nonlaftercrinbody  nonlafterheaderline  nonlafterinvalidembeddedoption  nospaceafterf  nospaceafterp  (+20 more)
